# my_lib_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/config/exception/: cli.json  exception.json  global.json  utils.json  write.json
cmake/config/exceptions/: vector.json  warning.json  write.json
cmake/script/: generate_exception_header.py
cmake/scripts/: const.py
include/: Utils.hpp
include/utils/: Utils.hpp  utils.hpp
include/utils/algorithms/c2dmp-hsm/: c2dmp-hsm.hpp
include/utils/algorithms/c2dmp-hsm/algorithm/: optimized.hpp  simplified.hpp
include/utils/attribute/: Attribute.hpp  Define.hpp  Macro.hpp  c++14.hpp  c++17.hpp  c++20.hpp  fallback.hpp
include/utils/cli/: Cli.hpp  Flags.hpp  Middlewares.hpp
include/utils/concepts/: GlobalConcepts.hpp  OperationConcepts.hpp
include/utils/exception/: AException.hpp  ExceptionDefine.hpp  IException.hpp  generated_exception_header.hpp
include/utils/exception/basic/: ErrorException.hpp  ExceptionError.hpp  ExceptionNone.hpp  ExceptionWarning.hpp  NoneException.hpp  WarningException.hpp
include/utils/exception/custom/: CustomException.hpp  ExceptionCustom.hpp
include/utils/vector/: IVector.hpp  OVector2.hpp  OVector3.hpp  Vector2.hpp  Vector3.hpp
include/utils/warning/: Observer.hpp  SharedObject.hpp
include/utils/write/: ANSI.hpp  Char.hpp  Color.hpp  Define.hpp  Macro.hpp
src/utils/cli/: Cli.cpp  Hooks.cpp  Setup.cpp
src/utils/exception/: AException.cpp
src/utils/warning/: Observer.cpp  SharedObject.cpp
src/utils/write/: ANSI.cpp  format.cpp
